优化菜单按钮和

--- a/app/scripts/views/biz/menu/menus.html
+++ b/app/scripts/views/biz/menu/menus.html
@@ -17,7 +17,7 @@
             <div class="col-sm-4">
                 <common_form form_param="param" form_init_data="{sort:menus.length+1}" form_url="add_url"
                              form_title="'新增主菜单'" callback="getapi"
-                             btn-class="btn btn-primary btn-rounded btn-bordered visible-lg pull-left">
+                             btn-class="btn btn-primary btn-rounded btn-bordered visible-lg pull-left">Ω
                     <i class="fa fa-plus"></i>
                 </common_form>
             </div>
