--- a/app/scripts/views/biz/sqls/update.html
+++ b/app/scripts/views/biz/sqls/update.html
@@ -13,7 +13,7 @@
             <div form-input text="名称" ng-model="param.name" placeholder="名称" required="true"></div>
             <div form-input text="code" ng-model="param.code" placeholder="code" required="true"></div>
             <div form-textarea text="SQL" ng-model="param.sql" placeholder="sql" required="true"></div>
-            <div form-textarea text="备注" ng-model="param.remark" placeholder="remark" required="true"></div>
+            <div form-textarea text="备注" ng-model="param.remark" placeholder="remark"></div>
           </div>
         </div>
         <div form-error-block></div>
