--- a/app/scripts/views/directive/side-left/side-menu.html
+++ b/app/scripts/views/directive/side-left/side-menu.html
@@ -1,7 +1,7 @@
 <div class="side-menu">
     <div class="menu-body">
         <ul class="nav nav-pills nav-stacked sidenav">
-            <li ng-repeat="menu in menus" ng-if="menu.childs.length>0"
+            <li ng-repeat="menu in menus" ng-if="menu.childs.length>0 && menu.key!='delete'"
                 ng-class="{active: (mainmenu == cons.state.main+'.'+menu.route) || $state.includes('{{cons.state.main+'.'+menu.route}}')}">
                 <!--ng-class="{active: $state.includes('{{cons.state.main+'.'+menu.route}}') }">-->
                 <a ui-sref="{{cons.state.main+'.'+menu.route}}">
