--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -137,6 +137,8 @@
 
                         <div form-image text="运营大图" ng-model="param.pics" max="100"></div>
                         <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100"></div>
+                        <h5 class="text-danger col-sm-offset-2">海报图片的宽高比是 5:4</h5>
+                        <div form-image-single text="海报图片" ng-model="param.wechat_bill_url"></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
