--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -138,7 +138,7 @@
                         <div form-image text="运营大图" ng-model="param.pics" max="100"></div>
                         <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100"></div>
                         <h5 class="text-danger col-sm-offset-2">海报图片的宽高比是 5:4</h5>
-                        <div form-image-single text="海报图片" ng-model="param.wechat_bill_url"></div>
+                        <div form-image-single text="海报图片" ng-model="param.wechat_bill_url" required="true"></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
@@ -474,7 +474,7 @@
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
                         <div form-radio text="是否显示在小程序首页" ng-model="param.show_mini_index" required="true" type="number" default="2"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
-                        <div form-radio text="是否启用朋友圈海报" ng-model="param.wechat_bill" required="true" type="number" default="2"
+                        <div form-radio text="是否启用朋友圈海报" ng-model="param.wechat_bill" required="true" type="number" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
                         <div form-radio text="是否显示在日历" ng-model="param.show_in_calendar" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
