--- a/app/scripts/views/live/questions/questions.html
+++ b/app/scripts/views/live/questions/questions.html
@@ -80,12 +80,12 @@
                   <tr>
                     <th class="text-center" style="width: 50px;">编号</th>
                     <th class="text-center" style="width: 50px;">用户</th>
-                    <th class="text-center" style="width: 150px;">视频组名</th>
-                    <th class="text-center" style="width: 150px;">房间名</th>
+                    <th class="text-center" >视频组名</th>
+                    <th class="text-center">房间名</th>
                     <th class="text-center" style="width: 150px;">手机</th>
                     <th class="text-center" style="width: 100px;">角色</th>
                     <th class="text-center" style="width: 50px;">回答</th>
-                    <th class="text-center">内容</th>
+                    <th class="text-center" style="width: 50px;">内容</th>
                     <th class="text-center" style="width: 150px;">图片</th>
                     <th class="text-center" style="width: 150px;">创建时间</th>
                     <th class="text-center" style="width: 100px;">置顶</th>
@@ -111,7 +111,9 @@
                       <a class="btn btn-primary btn-bordered btn-sm"
                          ng-bind="item.answer_num" ng-click="open_answer(item)"></a>
                     </td>
-                    <td class="text-left"><span ng-bind="item.content"></span></td>
+                    <td class="text-center">
+                      <div modal-textarea title="查看" content="item.content"></div>
+                    </td>
                     <td class="text-center">
                       <show_image url="item.pics[0].pic_url" width="100"></show_image>
                     </td>
@@ -123,7 +125,7 @@
                     <td class="text-center" ng-show="is_modal">
                       <a class="btn btn-sm btn-rounded" ng-click="on_top(item,$index)"
                          ng-class="{'btn-primary':item.on_top!=1,'btn-warning':item.on_top==1}"
-                      ng-bind="item.on_top!=1?'置顶':'取消'"></a>
+                         ng-bind="item.on_top!=1?'置顶':'取消'"></a>
                     </td>
                     <td class="text-center">
                         <span ng-bind="item.status|keyVal:'1':'待审核':'2':'已公开':'3':'已隐藏'"
