--- a/app/scripts/views/container/main.html
+++ b/app/scripts/views/container/main.html
@@ -1,25 +1,26 @@
 <div>
-    <nav class="navbar topnav-navbar navbar-fixed-top" role="navigation">
-        <div class="navbar-header text-center">
-            <a class="navbar-brand">Aha</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <!--<form class="navbar-form navbar-left ng-pristine ng-valid" role="search"><span-->
-            <!--class="glyphicon glyphicon-search"></span>-->
-            <!--<div class="form-group"><input type="text" class="form-control"></div>-->
-            <!--</form>-->
-            <div nav-message></div>
-            <div nav-account></div>
-        </div>
-    </nav>
-    <section class="dashboard-page ng-scope">
-        <aside id="sidebar">
-            <!--<perfect-scrollbar class="sidenav-outer" wheel-propagation="true" min-scrollbar-length="20">-->
-            <side-menu></side-menu>
-            <!--<side-widgets></side-widgets>-->
-            <!--</perfect-scrollbar>-->
-        </aside>
-        <section id="body-container" ui-view>
-        </section>
+  <nav class="navbar topnav-navbar navbar-fixed-top" role="navigation">
+    <div class="navbar-header text-center">
+      <a class="navbar-brand">Aha</a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <div nav-message></div>
+      <!--<form class="navbar-form navbar-left ng-pristine ng-valid" role="search"><span-->
+        <!--class="glyphicon glyphicon-search"></span>-->
+        <!--<div class="form-group"><input type="text" class="form-control"></div>-->
+      <!--</form>-->
+      <!--<div nav-search></div>-->
+      <div nav-account></div>
+    </div>
+  </nav>
+  <section class="dashboard-page ng-scope">
+    <aside id="sidebar">
+      <!--<perfect-scrollbar class="sidenav-outer" wheel-propagation="true" min-scrollbar-length="20">-->
+      <side-menu></side-menu>
+      <!--<side-widgets></side-widgets>-->
+      <!--</perfect-scrollbar>-->
+    </aside>
+    <section id="body-container" ui-view>
     </section>
+  </section>
 </div>
