--- a/app/scripts/views/directive/nav-top/nav-search.html
+++ b/app/scripts/views/directive/nav-top/nav-search.html
@@ -1,4 +1,6 @@
-<form class="navbar-form navbar-left ng-pristine ng-valid" role="search"><span
-  class="glyphicon glyphicon-search"></span>
-  <div class="form-group"><input type="text" class="form-control"></div>
+<form class="navbar-form navbar-left" role="search">
+  <span class="glyphicon glyphicon-search"></span>
+  <div class="form-group">
+    <input type="text" class="form-control underline" placeholder="功能搜索">
+  </div>
 </form>
