--- a/app/scripts/views/live/videogroups/room.html
+++ b/app/scripts/views/live/videogroups/room.html
@@ -17,17 +17,22 @@
     <div class="col-sm-10">
       <span class="label label-primary">ID:{{item.room_id}}</span>
       <span class="label "
-            ng-class="{'label-success':item.room.status==1,'label-danger':item.room.status==2}">
-                    房间:{{(item.room.status|keyVal:'1':'开启':'2':'关闭'|null2empty)}}
+            ng-class="{'label-success':item.room_status==1,'label-danger':item.room_status==2}">
+                    房间:{{(item.room_status|keyVal:'1':'开启':'2':'关闭'|null2empty)}}
               </span>
-      <span class="">{{item.room.title}}</span>
+      <span class="label "
+            ng-class="{'label-success':item.online_status==1,'label-danger':item.online_status==2}">
+                    类型:{{(item.online_status|keyVal:'1':'立即生效':'2':'定时生效'|null2empty)}}
+              </span>
+      <a class="btn btn-xs btn-primary btn-bordered" ng-click="show=!show">切换显示</a>
+      <span class="">{{item.room_title}}</span>
     </div>
     <div class="col-sm-1" ng-show="$last">
       <a class="btn btn-primary btn-bordered btn-xs"
-         ng-click="ngModel.splice($index, 0, {type: 1, title: ''})">向上新增章节</a>
+         ng-click="chapters.splice($index, 0, {type: 1, title: ''})">向上新增章节</a>
     </div>
     <div form-radio text="类型" ng-model="item.online_status" default="1" name="online_status"
-         source="[{text:'立即生效',value:'1'},{text:'定时生效',value:'2'}]"></div>
-    <div form-date-time text="设置时间" ng-model="item.online_time"></div>
+         source="[{text:'立即生效',value:'1'},{text:'定时生效',value:'2'}]" ng-show="show"></div>
+    <div form-date-time text="设置时间" ng-model="item.online_time" ng-show="show"></div>
   </div>
 </div>
