视频组中  数据量大时 章节排序

--- a/app/scripts/views/live/videogroups/room.html
+++ b/app/scripts/views/live/videogroups/room.html
@@ -24,12 +24,14 @@
             ng-class="{'label-success':item.online_status==1,'label-danger':item.online_status==2}">
                     类型:{{(item.online_status|keyVal:'1':'立即生效':'2':'定时生效'|null2empty)}}
               </span>
-      <a class="btn btn-xs btn-primary btn-bordered" ng-click="show=!show">切换显示</a>
+      <a class="btn btn-xs btn-bordered"
+         ng-class="{'btn-warning':show,'btn-primary':!show}"
+         ng-click="show=!show" ng-bind="!show?'显示详情':'隐藏详情'"></a>
       <span class="">{{item.room_title}}</span>
     </div>
     <div class="col-sm-1" ng-show="$last">
       <a class="btn btn-primary btn-bordered btn-xs"
-         ng-click="chapters.splice($index, 0, {type: 1, title: ''})">向上新增章节</a>
+         ng-click="chapters.splice($index, 0, {type: 1, title: ''})">向上加章节</a>
     </div>
     <div form-radio text="类型" ng-model="item.online_status" default="1" name="online_status"
          source="[{text:'立即生效',value:'1'},{text:'定时生效',value:'2'}]" ng-show="show"></div>
