--- a/app/scripts/views/directive/delete/delete-data.html
+++ b/app/scripts/views/directive/delete/delete-data.html
@@ -1,16 +1,17 @@
 <div class="panel panel-primary">
-    <div class="panel-heading">
-        <h3 class="panel-title" ng-bind="config.text||'删除'"></h3>
-    </div>
-    <div class="panel-body">
-        <form class="form-horizontal" name="FormBody" novalidate>
-            <div class="col-sm-12 form-group">
-                <div ng-include="getContentUrl()"></div>
-            </div>
-            <div class="col-sm-12 form-group">
-                <a class="btn btn-danger btn-rounded btn-sm pull-right" ng-click="del()" ng-bind="config.text"></a>
-                <!--<a class="btn btn-warning btn-rounded btn-sm pull-right" ng-click="cancel()">取消</a>-->
-            </div>
-        </form>
-    </div>
+  <div class="panel-heading">
+    <h3 class="panel-title" ng-bind="config.text||'删除'"></h3>
+  </div>
+  <div class="panel-body">
+    <form class="form-horizontal" name="FormBody" novalidate>
+      <div class="col-sm-12 form-group">
+        <div ng-include="getContentUrl()"></div>
+      </div>
+      <div class="col-sm-12 form-group">
+        <a class="btn btn-rounded btn-sm pull-right {{config.class}} " ng-click="del()"
+           ng-bind="config.text"></a>
+        <!--<a class="btn btn-warning btn-rounded btn-sm pull-right" ng-click="cancel()">取消</a>-->
+      </div>
+    </form>
+  </div>
 </div>
