提问回答的管理的 内容展示限制50个字

--- a/app/scripts/views/live/answers/answers.html
+++ b/app/scripts/views/live/answers/answers.html
@@ -82,10 +82,10 @@
                                         <th class="text-center" style="width: 50px;">用户</th>
                                         <th class="text-center" style="width: 150px;">手机</th>
                                         <th class="text-center">视频组名</th>
-                                        <th class="text-center">房间名</th>
+                                        <th class="text-center" style="width: 100px;">房间名</th>
                                         <th class="text-center" style="width: 50px;">角色</th>
                                         <th class="text-center" style="width: 50px;">点赞数</th>
-                                        <th class="text-center" style="width: 50px;">内容</th>
+                                        <th class="text-center" >内容</th>
                                         <th class="text-center" style="width: 120px;">图片</th>
                                         <th class="text-center" style="width: 150px;">创建时间</th>
                                         <th class="text-center" style="width: 100px;">状态</th>
@@ -106,7 +106,8 @@
                                             <span ng-bind="item.thumbup_count"></span>
                                         </td>
                                         <td class="text-center">
-                                            <div modal-textarea title="查看" content="item.answer"></div>
+                                            <div modal-textarea title="查看" content="item.answer" ng-if="item.answer.length>50"></div>
+                                            <p ng-if="item.answer.length<=50" ng-bind="item.answer"></p>
                                         </td>
                                         <td class="text-center">
                                             <show_image url="item.pics[0].pic_url" width="100"></show_image>
