--- a/app/scripts/views/directive/dnd/dnd-array.html
+++ b/app/scripts/views/directive/dnd/dnd-array.html
@@ -52,33 +52,13 @@
     </div>
     <div class="panel-body dndsimpleSubject">
         <div class="col-sm-12 form-group">
-            <ul dnd-list="ngModel">
-                <li ng-repeat="(key,item) in ngModel"
-                    dnd-draggable="item"
-                    dnd-moved="ngModel.splice(key, 1)"
-                    dnd-effect-allowed="move">
-                    <dnd-nodrag>
-                        <!--<div dnd-handle class="handle">:::</div>-->
-                        <div class="row">
-                            <div class="col-sm-11" ng-include="getContentUrl()"></div>
-                            <div class="col-sm-1" dnd-handle>
-                                <a class="btn btn-danger btn-xs btn-bordered pull-right"
-                                   ng-click="del($index)" ng-show="config.del!=false">删除</a>
-                            </div>
-                        </div>
-                    </dnd-nodrag>
-                </li>
-                <li class="dndPlaceholder">
-                    Drop any here
-                </li>
-            </ul>
-
-            <!--<table class="table table-bordered table-striped">-->
-                <!--<thead></thead>-->
-                <!--<tbody dnd-list="ngModel">-->
-                <!--<tr ng-repeat="(key,item) in ngModel" dnd-draggable="item"-->
-                    <!--dnd-moved="ngModel.splice(key, 1);" dnd-effect-allowed="move">-->
-                    <!--<td dnd-nodrag>-->
+            <!--<ul dnd-list="ngModel">-->
+                <!--<li ng-repeat="(key,item) in ngModel"-->
+                    <!--dnd-draggable="item"-->
+                    <!--dnd-moved="ngModel.splice(key, 1)"-->
+                    <!--dnd-effect-allowed="move">-->
+                    <!--<dnd-nodrag>-->
+                        <!--&lt;!&ndash;<div dnd-handle class="handle">:::</div>&ndash;&gt;-->
                         <!--<div class="row">-->
                             <!--<div class="col-sm-11" ng-include="getContentUrl()"></div>-->
                             <!--<div class="col-sm-1" dnd-handle>-->
@@ -86,19 +66,39 @@
                                    <!--ng-click="del($index)" ng-show="config.del!=false">删除</a>-->
                             <!--</div>-->
                         <!--</div>-->
-                    <!--</td>-->
-                <!--</tr>-->
-                <!--<tr class="dndPlaceholder">-->
-                    <!--<td class="text-center" colspan="1"><h3 class="red">拖拽到这里</h3></td>-->
-                <!--</tr>-->
-                <!--<tr ng-show="config.add!=false">-->
-                    <!--<td class="text-center" colspan="1">-->
-                        <!--<a class="btn btn-success btn-rounded btn-xs pull-right"-->
-                           <!--ng-click="add()">添加</a>-->
-                    <!--</td>-->
-                <!--</tr>-->
-                <!--</tbody>-->
-            <!--</table>-->
+                    <!--</dnd-nodrag>-->
+                <!--</li>-->
+                <!--<li class="dndPlaceholder">-->
+                    <!--Drop any here-->
+                <!--</li>-->
+            <!--</ul>-->
+
+            <table class="table table-bordered table-striped">
+                <thead></thead>
+                <tbody dnd-list="ngModel">
+                <tr ng-repeat="(key,item) in ngModel" dnd-draggable="item"
+                    dnd-moved="ngModel.splice(key, 1);" dnd-effect-allowed="move">
+                    <td dnd-nodrag>
+                        <div class="row">
+                            <div class="col-sm-11" ng-include="getContentUrl()"></div>
+                            <div class="col-sm-1" dnd-handle>
+                                <a class="btn btn-danger btn-xs btn-bordered pull-right"
+                                   ng-click="del($index)" ng-show="config.del!=false">删除</a>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr class="dndPlaceholder">
+                    <td class="text-center" colspan="1"><h3 class="red">拖拽到这里</h3></td>
+                </tr>
+                <tr ng-show="config.add!=false">
+                    <td class="text-center" colspan="1">
+                        <a class="btn btn-success btn-rounded btn-xs pull-right"
+                           ng-click="add()">添加</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
