--- a/app/scripts/views/biz/act/distribution.html
+++ b/app/scripts/views/biz/act/distribution.html
@@ -4,12 +4,17 @@
       <div form-radio text="是否开启分销" ng-model="param.open_state" required="true" default="1"
            source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>
       <div form-date-time text="开启分销时间" ng-model="param.open_time" required="true"></div>
-      <div form-input text="团内一级" ng-model="param.groupbuy_in_level_one" required="true" type="number" min="0" max="100"></div>
+      <div form-input text="团内一级（成团前）" ng-model="param.groupbuy_in_level_one" required="true" type="number" min="0" max="100"></div>
       <!--<div form-input text="团内二级" ng-model="param.groupbuy_in_level_two" required="true"></div>-->
-      <div form-input text="弹性团一级" ng-model="param.groupbuy_elastic_level_one" required="true" type="number" min="0" max="100"></div>
+      <div form-input text="团内弹性团一级（成团后）" ng-model="param.groupbuy_elastic_level_one" required="true" type="number" min="0" max="100"></div>
       <!--<div form-input text="弹性团二级" ng-model="param.groupbuy_elastic_level_two" required="true"></div>-->
       <div form-input text="团外一级" ng-model="param.poster_level_one" required="true" type="number" min="0" max="100"></div>
       <!--<div form-input text="团外二级" ng-model="param.poster_level_two" required="true"></div>-->
+
+      <div form-radio text="课程详情页是否显示分销海报" ng-model="param.open_product_poster" required="true" default="1"
+           source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>
+      <div form-radio text="拼课详情页是否显示分销海报" ng-model="param.open_groupbuy_poster" required="true" default="1"
+           source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>
     </div>
   </div>
   <a class="btn btn-success btn-rounded pull-right" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
