分销设置增加默认值

--- a/app/scripts/views/biz/act/distribution.html
+++ b/app/scripts/views/biz/act/distribution.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal" name="FormBody" novalidate>
   <div class="panel panel-primary">
     <div class="panel-body">
-      <div form-input text="标题" ng-model="param.title" required="true" ng-disabled="true"></div>
+      <div form-input text="标题" ng-model="param.title" ng-disabled="true"></div>
       <div form-radio text="是否开启分销" ng-model="param.open_state" required="true" default="1"
            source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>
       <div form-date-time text="开启分销时间" ng-model="param.open_time" required="true"></div>
